# rust-hyper-server-template

./: .boilerplatoignore  Cargo.toml  Cargo.toml.boiler  README.md  README.md.boiler  boilerplato.yml  tusk.yml  tusk.yml.boiler
src/: lib.rs  main.rs  main.rs.boiler
src/prelude/: mod.rs
src/utils/: mod.rs
tests/: integration_test.rs  integration_test.rs.boiler
