[package]
name = "rust-hyper-server-template"
version = "0.1.0"
description = "A boilerplato template for a Rust server app using hyper http library."
publish = false
homepage = "https://github.com/boilerplato/rust-hyper-server-template"
repository = "https://github.com/boilerplato/rust-hyper-server-template"
keywords = ["boilerplato", "rust", "template"]
categories = ["template-engine"]
authors = ["Rousan Ali <rousanali786@gmail.com>"]
readme = "README.md"
license = "MIT"
edition = "2018"

[dependencies]
http = "0.2"
hyper = "0.13"
tokio = { version = "0.2", features = ["full"] }
bytes = "0.5"
lazy_static = "1.4.0"
dotenv = "0.15.0"
colored = "1.9"
log = "0.4"
fern = "0.5"
chrono = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "0.8", features = ["v4"] }